Revert "TFP-2202 startet å bruke domenetjeneste for å hente fp uttak, i stedet for å gå direkte mot repo (#216)"
This reverts commit b8919da385cb0447e31a3c304887bc58d0f2d61f.