@@ -14,14 +14,18 @@ import no.nav.foreldrepenger.behandling.RelatertBehandlingTjeneste;
 import no.nav.foreldrepenger.behandlingslager.behandling.Behandling;
 import no.nav.foreldrepenger.behandlingslager.behandling.Behandlingsresultat;
 import no.nav.foreldrepenger.behandlingslager.behandling.BehandlingsresultatRepository;
+import no.nav.foreldrepenger.behandlingslager.behandling.ytelsefordeling.YtelseFordelingAggregat;
 import no.nav.foreldrepenger.behandlingslager.behandling.ytelsefordeling.YtelsesFordelingRepository;
+import no.nav.foreldrepenger.behandlingslager.uttak.UttakRepository;
+import no.nav.foreldrepenger.behandlingslager.uttak.UttakResultatEntitet;
+import no.nav.foreldrepenger.behandlingslager.uttak.UttakResultatPeriodeAktivitetEntitet;
+import no.nav.foreldrepenger.behandlingslager.uttak.UttakResultatPeriodeEntitet;
+import no.nav.foreldrepenger.behandlingslager.uttak.UttakResultatPeriodeSøknadEntitet;
+import no.nav.foreldrepenger.behandlingslager.uttak.UttakResultatPerioderEntitet;
 import no.nav.foreldrepenger.domene.arbeidsforhold.InntektArbeidYtelseTjeneste;
 import no.nav.foreldrepenger.domene.iay.modell.ArbeidsforholdOverstyring;
 import no.nav.foreldrepenger.domene.iay.modell.InntektArbeidYtelseGrunnlag;
-import no.nav.foreldrepenger.domene.uttak.ForeldrepengerUttak;
-import no.nav.foreldrepenger.domene.uttak.ForeldrepengerUttakPeriode;
-import no.nav.foreldrepenger.domene.uttak.ForeldrepengerUttakPeriodeAktivitet;
-import no.nav.foreldrepenger.domene.uttak.ForeldrepengerUttakTjeneste;
+import no.nav.foreldrepenger.domene.typer.InternArbeidsforholdRef;
 import no.nav.foreldrepenger.domene.uttak.UttakOmsorgUtil;
 import no.nav.foreldrepenger.web.app.tjenester.behandling.uttak.dto.UttakResultatPeriodeAktivitetDto;
 import no.nav.foreldrepenger.web.app.tjenester.behandling.uttak.dto.UttakResultatPeriodeDto;
@@ -29,7 +33,7 @@ import no.nav.foreldrepenger.web.app.tjenester.behandling.uttak.dto.UttakResulta
 
 @ApplicationScoped
 public class UttakPerioderDtoTjeneste {
-    private ForeldrepengerUttakTjeneste uttakTjeneste;
+    private UttakRepository uttakRepository;
     private RelatertBehandlingTjeneste relatertBehandlingTjeneste;
     private YtelsesFordelingRepository ytelsesFordelingRepository;
     private ArbeidsgiverDtoTjeneste arbeidsgiverDtoTjeneste;
@@ -41,13 +45,13 @@ public class UttakPerioderDtoTjeneste {
     }
 
     @Inject
-    public UttakPerioderDtoTjeneste(ForeldrepengerUttakTjeneste uttakTjeneste,
-                                    RelatertBehandlingTjeneste relatertBehandlingTjeneste,
-                                    YtelsesFordelingRepository ytelsesFordelingRepository,
-                                    ArbeidsgiverDtoTjeneste arbeidsgiverDtoTjeneste,
-                                    BehandlingsresultatRepository behandlingsresultatRepository,
-                                    InntektArbeidYtelseTjeneste inntektArbeidYtelseTjeneste) {
-        this.uttakTjeneste = uttakTjeneste;
+    public UttakPerioderDtoTjeneste(UttakRepository uttakRepository,
+                                        RelatertBehandlingTjeneste relatertBehandlingTjeneste,
+                                        YtelsesFordelingRepository ytelsesFordelingRepository,
+                                        ArbeidsgiverDtoTjeneste arbeidsgiverDtoTjeneste,
+                                        BehandlingsresultatRepository behandlingsresultatRepository,
+                                        InntektArbeidYtelseTjeneste inntektArbeidYtelseTjeneste) {
+        this.uttakRepository = uttakRepository;
         this.relatertBehandlingTjeneste = relatertBehandlingTjeneste;
         this.ytelsesFordelingRepository = ytelsesFordelingRepository;
         this.arbeidsgiverDtoTjeneste = arbeidsgiverDtoTjeneste;
@@ -56,54 +60,47 @@ public class UttakPerioderDtoTjeneste {
     }
 
     public Optional<UttakResultatPerioderDto> mapFra(Behandling behandling) {
-        var ytelseFordeling = ytelsesFordelingRepository.hentAggregatHvisEksisterer(behandling.getId());
-
-        final List<UttakResultatPeriodeDto> annenpartUttaksperioder;
-        final Optional<ForeldrepengerUttak> annenpartUttak;
-        var annenpartBehandling = annenpartBehandling(behandling);
-        if (annenpartBehandling.isPresent()) {
-            annenpartUttak = uttakTjeneste.hentUttakHvisEksisterer(annenpartBehandling.get().getId());
-            if (annenpartUttak.isPresent()) {
-                annenpartUttaksperioder = annenpartUttak.map(u -> {
-                    var annenpartBehandlingId = annenpartBehandling.orElseThrow().getId();
-                    return finnUttakResultatPerioder(u, annenpartBehandlingId);
-                }).orElse(List.of());
-            } else {
-                annenpartUttaksperioder = List.of();
-            }
-        } else {
-            annenpartUttaksperioder = List.of();
-            annenpartUttak = Optional.empty();
-        }
-
-        var perioderSøker = finnUttakResultatPerioderSøker(behandling.getId());
-        var perioder = new UttakResultatPerioderDto(perioderSøker,
-            annenpartUttaksperioder,
-            ytelseFordeling.map(yf -> UttakOmsorgUtil.harAnnenForelderRett(yf, annenpartUttak)).orElse(false),
+        Optional<YtelseFordelingAggregat> ytelseFordeling = ytelsesFordelingRepository.hentAggregatHvisEksisterer(behandling.getId());
+        Optional<UttakResultatEntitet> uttaksresultatAnnenPart = annenPartUttak(behandling);
+        UttakResultatPerioderDto perioder = new UttakResultatPerioderDto(finnUttakResultatPerioderSøker(behandling.getId()),
+            uttaksresultatAnnenPart.map(this::finnUttakResultatPerioderAnnenpart).orElse(Collections.emptyList()),
+            ytelseFordeling.map(yf -> UttakOmsorgUtil.harAnnenForelderRett(yf, uttaksresultatAnnenPart)).orElse(false),
             ytelseFordeling.map(UttakOmsorgUtil::harAleneomsorg).orElse(false));
         return Optional.of(perioder);
     }
 
-    private Optional<Behandling> annenpartBehandling(Behandling søkersBehandling) {
-        Optional<Behandlingsresultat> behandlingsresultat = behandlingsresultatRepository.hentHvisEksisterer(søkersBehandling.getId());
+    private Optional<UttakResultatEntitet> annenPartUttak(Behandling behandling) {
+        Optional<Behandlingsresultat> behandlingsresultat = behandlingsresultatRepository.hentHvisEksisterer(behandling.getId());
         if (behandlingsresultat.isPresent()) {
             if (behandlingsresultat.get().getBehandlingVedtak() != null) {
-                return relatertBehandlingTjeneste.hentAnnenPartsGjeldendeBehandlingPåVedtakstidspunkt(søkersBehandling);
+                return relatertBehandlingTjeneste.hentAnnenPartsGjeldendeUttaksplanPåVedtakstidspunkt(behandling);
             }
         }
-        return relatertBehandlingTjeneste.hentAnnenPartsGjeldendeVedtattBehandling(søkersBehandling.getFagsak().getSaksnummer());
+        return relatertBehandlingTjeneste.hentAnnenPartsGjeldendeVedtattUttaksplan(behandling.getFagsak().getSaksnummer());
     }
 
     private List<UttakResultatPeriodeDto> finnUttakResultatPerioderSøker(Long behandling) {
-        return uttakTjeneste.hentUttakHvisEksisterer(behandling).map(uttak -> finnUttakResultatPerioder(uttak, behandling)).orElse(List.of());
+        Optional<UttakResultatEntitet> uttakResultat = uttakRepository.hentUttakResultatHvisEksisterer(behandling);
+
+        if (uttakResultat.isEmpty()) {
+            return Collections.emptyList();
+        }
+
+        return finnUttakResultatPerioder(uttakResultat.get());
     }
 
-    private List<UttakResultatPeriodeDto> finnUttakResultatPerioder(ForeldrepengerUttak uttakResultat, Long behandling) {
-        var gjeldenePerioder = uttakResultat.getGjeldendePerioder();
+    private List<UttakResultatPeriodeDto> finnUttakResultatPerioderAnnenpart(UttakResultatEntitet uttaksresultatAnnenPart) {
+        return finnUttakResultatPerioder(uttaksresultatAnnenPart);
+    }
 
-        var iayGrunnlag = inntektArbeidYtelseTjeneste.finnGrunnlag(behandling);
+    private List<UttakResultatPeriodeDto> finnUttakResultatPerioder(UttakResultatEntitet uttakResultat) {
+        UttakResultatPerioderEntitet gjeldenePerioder = uttakResultat.getGjeldendePerioder();
+
         List<UttakResultatPeriodeDto> list = new ArrayList<>();
-        for (var entitet : gjeldenePerioder) {
+
+        var behandlingId = uttakResultat.getBehandlingsresultat().getBehandlingId();
+        var iayGrunnlag = inntektArbeidYtelseTjeneste.finnGrunnlag(behandlingId);
+        for (UttakResultatPeriodeEntitet entitet : gjeldenePerioder.getPerioder()) {
             UttakResultatPeriodeDto periode = map(entitet, iayGrunnlag);
             list.add(periode);
         }
@@ -111,27 +108,30 @@ public class UttakPerioderDtoTjeneste {
         return sortedByFom(list);
     }
 
-    private UttakResultatPeriodeDto map(ForeldrepengerUttakPeriode periode, Optional<InntektArbeidYtelseGrunnlag> inntektArbeidYtelseGrunnlag) {
-        var dto = new UttakResultatPeriodeDto.Builder()
-            .medTidsperiode(periode.getFom(), periode.getTom())
-            .medManuellBehandlingÅrsak(periode.getManuellBehandlingÅrsak())
-            .medUtsettelseType(periode.getUtsettelseType())
-            .medPeriodeResultatType(periode.getResultatType())
-            .medBegrunnelse(periode.getBegrunnelse())
-            .medPeriodeResultatÅrsak(periode.getResultatÅrsak())
-            .medFlerbarnsdager(periode.isFlerbarnsdager())
-            .medSamtidigUttak(periode.isSamtidigUttak())
-            .medSamtidigUttaksprosent(periode.getSamtidigUttaksprosent())
-            .medGraderingInnvilget(periode.isGraderingInnvilget())
-            .medGraderingAvslåttÅrsak(periode.getGraderingAvslagÅrsak())
-            .medOppholdÅrsak(periode.getOppholdÅrsak())
-            .medPeriodeType(periode.getSøktKonto())
-            .build();
-
-        for (var aktivitet : periode.getAktiviteter()) {
-            dto.leggTilAktivitet(map(aktivitet, inntektArbeidYtelseGrunnlag, periode.opprinneligSendtTilManuellBehandling()));
+    private UttakResultatPeriodeDto map(UttakResultatPeriodeEntitet entitet, Optional<InntektArbeidYtelseGrunnlag> inntektArbeidYtelseGrunnlag) {
+        UttakResultatPeriodeDto.Builder builder = new UttakResultatPeriodeDto.Builder()
+            .medTidsperiode(entitet.getFom(), entitet.getTom())
+            .medManuellBehandlingÅrsak(entitet.getManuellBehandlingÅrsak())
+            .medUtsettelseType(entitet.getUtsettelseType())
+            .medPeriodeResultatType(entitet.getPeriodeResultatType())
+            .medBegrunnelse(entitet.getBegrunnelse())
+            .medPeriodeResultatÅrsak(entitet.getPeriodeResultatÅrsak())
+            .medFlerbarnsdager(entitet.isFlerbarnsdager())
+            .medSamtidigUttak(entitet.isSamtidigUttak())
+            .medSamtidigUttaksprosent(entitet.getSamtidigUttaksprosent())
+            .medGraderingInnvilget(entitet.isGraderingInnvilget())
+            .medGraderingAvslåttÅrsak(entitet.getGraderingAvslagÅrsak())
+            .medOppholdÅrsak(entitet.getOppholdÅrsak());
+        if (entitet.getPeriodeSøknad().isPresent()) {
+            UttakResultatPeriodeSøknadEntitet periodeSøknad = entitet.getPeriodeSøknad().get();
+            builder.medPeriodeType(periodeSøknad.getUttakPeriodeType());
         }
-        return dto;
+        UttakResultatPeriodeDto periode = builder.build();
+
+        for (UttakResultatPeriodeAktivitetEntitet aktivitet : entitet.getAktiviteter()) {
+            periode.leggTilAktivitet(map(aktivitet, inntektArbeidYtelseGrunnlag));
+        }
+        return periode;
     }
 
     private List<UttakResultatPeriodeDto> sortedByFom(List<UttakResultatPeriodeDto> list) {
@@ -141,32 +141,28 @@ public class UttakPerioderDtoTjeneste {
             .collect(Collectors.toList());
     }
 
-    private UttakResultatPeriodeAktivitetDto map(ForeldrepengerUttakPeriodeAktivitet aktivitet,
-                                                 Optional<InntektArbeidYtelseGrunnlag> inntektArbeidYtelseGrunnlag,
-                                                 boolean opprinneligSendtTilManuellBehandling) {
+    private UttakResultatPeriodeAktivitetDto map(UttakResultatPeriodeAktivitetEntitet aktivitet, Optional<InntektArbeidYtelseGrunnlag> inntektArbeidYtelseGrunnlag) {
         UttakResultatPeriodeAktivitetDto.Builder builder = new UttakResultatPeriodeAktivitetDto.Builder()
             .medProsentArbeid(aktivitet.getArbeidsprosent())
-            .medGradering(aktivitet.isSøktGraderingForAktivitetIPeriode())
+            .medGradering(aktivitet.isSøktGradering())
             .medTrekkdager(aktivitet.getTrekkdager())
             .medStønadskontoType(aktivitet.getTrekkonto())
             .medUttakArbeidType(aktivitet.getUttakArbeidType());
         mapArbeidsforhold(aktivitet, builder, inntektArbeidYtelseGrunnlag);
-        if (!opprinneligSendtTilManuellBehandling) {
-            builder.medUtbetalingsgrad(aktivitet.getUtbetalingsgrad());
+        if (!aktivitet.getPeriode().opprinneligSendtTilManueltBehandling()) {
+            builder.medUtbetalingsgrad(aktivitet.getUtbetalingsprosent());
         }
         return builder.build();
     }
 
-    private void mapArbeidsforhold(ForeldrepengerUttakPeriodeAktivitet aktivitet,
-                                   UttakResultatPeriodeAktivitetDto.Builder builder,
-                                   Optional<InntektArbeidYtelseGrunnlag> inntektArbeidYtelseGrunnlag) {
+    private void mapArbeidsforhold(UttakResultatPeriodeAktivitetEntitet aktivitet, UttakResultatPeriodeAktivitetDto.Builder builder, Optional<InntektArbeidYtelseGrunnlag> inntektArbeidYtelseGrunnlag) {
         var arbeidsgiverOptional = aktivitet.getUttakAktivitet().getArbeidsgiver();
         List<ArbeidsforholdOverstyring> overstyringer = inntektArbeidYtelseGrunnlag.map(InntektArbeidYtelseGrunnlag::getArbeidsforholdOverstyringer).orElse(Collections.emptyList());
         var arbeidsgiverDto = arbeidsgiverOptional.map(arbgiver -> arbeidsgiverDtoTjeneste.mapFra(arbgiver, overstyringer)).orElse(null);
-        var ref = aktivitet.getArbeidsforholdRef();
-        if (ref != null && inntektArbeidYtelseGrunnlag.isPresent() && inntektArbeidYtelseGrunnlag.get().getArbeidsforholdInformasjon().isPresent() && arbeidsgiverOptional.isPresent()) {
-            var eksternArbeidsforholdId = inntektArbeidYtelseGrunnlag.get().getArbeidsforholdInformasjon().get().finnEkstern(arbeidsgiverOptional.get(), ref);
-            builder.medArbeidsforhold(ref, eksternArbeidsforholdId.getReferanse(), arbeidsgiverDto);
+        var internArbeidsforholdId = aktivitet.getArbeidsforholdId();
+        if (internArbeidsforholdId != null && inntektArbeidYtelseGrunnlag.isPresent() && inntektArbeidYtelseGrunnlag.get().getArbeidsforholdInformasjon().isPresent() && arbeidsgiverOptional.isPresent()) {
+            var eksternArbeidsforholdId = inntektArbeidYtelseGrunnlag.get().getArbeidsforholdInformasjon().get().finnEkstern(arbeidsgiverOptional.get(), InternArbeidsforholdRef.ref(internArbeidsforholdId));
+            builder.medArbeidsforhold(internArbeidsforholdId, eksternArbeidsforholdId.getReferanse(), arbeidsgiverDto);
         } else {
             builder.medArbeidsforhold(null, null, arbeidsgiverDto);
         }
